syntax = "proto3";

option go_package = "./";

message CreateUserRequest {
    string username = 1;
    string password = 2;
}

message CreateUserResponse {
    string user_id = 1;
}

message AuthenticationUserRequest {
    string username = 1;
    string password = 2;
}

message AuthenticationUserResponse {
    string user_id = 1;
    string token = 2;
}

service BookStore {

    // RPC services to create a user and authenticate it
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);

    rpc Authentication (AuthenticationUserRequest) returns (AuthenticationUserResponse);
    
    // Multiple rpc services handling different function 
    rpc CreateBook (CreateBookRequest) returns (CreateBookResponse);

    rpc GetBook (GetBookRequest) returns (GetBookResponse);

    rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse);

    rpc ListBooks (ListBooksRequest) returns (ListBooksResponse);

    rpc UpdateBook (UpdateBookRequest) returns (UpdateBookResponse);

}


message Book {
    string id = 1;
    string title = 2;
    string Author = 3;
    int32 published_year = 4;
    string genre = 5;
    float price = 6;
}

// Types to create a book
message CreateBookRequest {
    Book book = 1;
}

message CreateBookResponse {
    string id = 1;
}


// Types to get a book by id
message GetBookRequest {
    string id = 1;
}

message GetBookResponse {
    Book book = 1;
}

// Types to delete a book

message DeleteBookRequest {
    string id = 1;
}

message DeleteBookResponse {
    bool success = 1;
}

// Types to get the BookList

message ListBooksRequest {
}

message ListBooksResponse {
    repeated Book books = 1;
}

// Type to update the book

message UpdateBookRequest {
    Book book = 1;
}

message UpdateBookResponse {
    bool success = 1;
}